logs/pykronos.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/flake8'...
Listing './lib/python3.5/site-packages/flake8/tests'...
Listing './lib/python3.5/site-packages/flake8-2.2.3.dist-info'...
Listing './lib/python3.5/site-packages/mccabe-0.6.1.dist-info'...
Listing './lib/python3.5/site-packages/mock-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pep8-1.7.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyflakes'...
Listing './lib/python3.5/site-packages/pyflakes/scripts'...
Listing './lib/python3.5/site-packages/pyflakes/test'...
Listing './lib/python3.5/site-packages/pyflakes-1.6.0.dist-info'...
Listing './lib/python3.5/site-packages/pykronos'...
Compiling './lib/python3.5/site-packages/pykronos/client.py'...
***   File "./lib/python3.5/site-packages/pykronos/client.py", line 256
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pykronos/common'...
Compiling './lib/python3.5/site-packages/pykronos/common/cache.py'...
***   File "./lib/python3.5/site-packages/pykronos/common/cache.py", line 69
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pykronos/common/cloudpickle.py'...
***   File "./lib/python3.5/site-packages/pykronos/common/cloudpickle.py", line 141
    except RuntimeError, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pykronos/common/concurrent.py'...
***   File "./lib/python3.5/site-packages/pykronos/common/concurrent.py", line 63
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pykronos/common/decorators.py'...
***   File "./lib/python3.5/site-packages/pykronos/common/decorators.py", line 26
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pykronos/common/readmeify.py'...
***   File "./lib/python3.5/site-packages/pykronos/common/readmeify.py", line 61
    print first
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pykronos/utils'...
Listing './lib/python3.5/site-packages/pykronos-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.2.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests/packages'...
Listing './lib/python3.5/site-packages/requests/packages/chardet'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/util'...
Listing './lib/python3.5/site-packages/requests-2.3.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/ujson-1.33.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
